--- a/.gitignore
+++ b/.gitignore
@@ -138,7 +138,7 @@ iOSInjectionProject/
 !*.xcodeproj/project.pbxproj
 !*.xcodeproj/xcshareddata/
 !*.xcworkspace/contents.xcworkspacedata
-**/xcshareddata/WorkspaceSettings.xcsettings
+**/xcshareddata
 
 # End of https://www.toptal.com/developers/gitignore/api/swift,xcode,cocoapods,macos
 
