--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -23,4 +23,5 @@ jobs:
     - name: Build App
       run: xcodebuild -workspace "zmoney.xcworkspace" -scheme "zmoney" -destination "generic/platform=iOS" -configuration Release build CODE_SIGNING_ALLOWED=NO
 
-
+    - name: Unit tests
+      run: xcodebuild clean test -workspace "zmoney.xcworkspace" -scheme "zmoney" -destination "platform=iOS Simulator,OS=latest,name=iPhone 12"
